--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,19 +1,4 @@
-boto3
-duckdb
-fsspec
-genson
-google-api-python-client
-httplib2
-oauth2client
-pandas
-psycopg2>=2.6.2
-python-dateutil
-PyYAML
-sqlalchemy
-sumologic-sdk
-tabulate
-xlrd
-xlwt
+pytest
 mypy
 types-PyYAML
 types-python-dateutil
