--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,10 +27,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         mkdir -p "$PWD/.cache/localpip"
-        python setup.py install --prefix "$PWD/.cache/localpip"
-        pip install -r requirements-dev.txt --target="$PWD/.cache/localpip"
+        export PYTHONPATH=$PYTHONPATH:"$PWD/.cache/localpip" && export PATH=$PATH:"$PWD/.cache/localpip/bin" && python setup.py install --prefix "$PWD/.cache/localpip"
+        export PYTHONPATH=$PYTHONPATH:"$PWD/.cache/localpip" && export PATH=$PATH:"$PWD/.cache/localpip/bin" && pip install -r requirements-dev.txt --target="$PWD/.cache/localpip"
     - name: Test
       run: |
-        export PYTHONPATH=$PYTHONPATH:"$PWD/.cache/localpip" && export PATH=$PATH:"$PWD/.cache/localpip/bin" &&make test-ci
+        export PYTHONPATH=$PYTHONPATH:"$PWD/.cache/localpip" && export PATH=$PATH:"$PWD/.cache/localpip/bin" && make test-ci
 
 
