--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,12 +21,12 @@ jobs:
       uses: actions/cache@v2
       with:
         path: '.cache/localpip'
-        key: tableconv-0-${{ steps.setup-python.outputspython-version }}-${{ hashFiles('setup.py', 'requirements-dev.txt', '.github/workflows/build.yml') }}
+        key: tableconv-1-${{ steps.setup-python.outputspython-version }}-${{ hashFiles('setup.py', 'requirements-dev.txt', '.github/workflows/build.yml') }}
     - name: Install Python Dependencies
       if: steps.cache.outputs.cache-hit != 'true'
       run: |
         python -m pip install --upgrade pip
-        mkdir -p "$PWD/.cache/localpip"
+        mkdir -p "$PWD/.cache/localpip/lib/python3.8/site-packages/"
         export PYTHONPATH=$PYTHONPATH:"$PWD/.cache/localpip" && export PATH=$PATH:"$PWD/.cache/localpip/bin" && python setup.py install --prefix "$PWD/.cache/localpip"
         export PYTHONPATH=$PYTHONPATH:"$PWD/.cache/localpip" && export PATH=$PATH:"$PWD/.cache/localpip/bin" && pip install -r requirements-dev.txt --target="$PWD/.cache/localpip"
     - name: Test
