--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,6 @@ jobs:
         export PYTHONPATH=$PYTHONPATH:"$PWD/.cache/localpip" && export PATH=$PATH:"$PWD/.cache/localpip/bin" && pip install -r requirements-dev.txt --target="$PWD/.cache/localpip" --upgrade
     - name: Test
       run: |
-        export PYTHONPATH=$PYTHONPATH:"$PWD/.cache/localpip" && export PATH=$PATH:"$PWD/.cache/localpip/bin" && make test-ci
+        export PYTHONPATH=$PYTHONPATH:"$PWD/.cache/localpip" && export MYPYPATH=$MYPYPATH:"$PWD/.cache/localpip" export PATH=$PATH:"$PWD/.cache/localpip/bin" && make test-ci
 
 
