--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,13 +16,21 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
+    - name: Try to Cache Pip Dependencies
+      id: cache
+      uses: actions/cache@v2
+      with:
+        path: '.cache/localpip'
+        key: tableconv-1-${{ steps.setup-python.outputspython-version }}-${{ hashFiles('setup.py', 'requirements-dev.txt', '.github/workflows/build.yml') }}
     - name: Install Python Dependencies
+      if: steps.cache.outputs.cache-hit != 'true'
       run: |
         python -m pip install --upgrade pip
-        python setup.py install
-        pip install -r requirements-dev.txt
+        mkdir -p "$PWD/.cache/localpip/lib/python3.8/site-packages/"
+        export PYTHONPATH="$PWD/.cache/localpip" && export PATH="$PWD/.cache/localpip/bin:$PATH" && python setup.py install --prefix "$PWD/.cache/localpip"
+        export PYTHONPATH="$PWD/.cache/localpip" && export PATH="$PWD/.cache/localpip/bin:$PATH" && pip install -r requirements-dev.txt --target="$PWD/.cache/localpip" --upgrade
     - name: Test
       run: |
-        make test-ci
+        export PYTHONPATH="$PWD/.cache/localpip" && export MYPYPATH="$PWD/.cache/localpip" export PATH="$PWD/.cache/localpip/bin:$PATH" && make test-ci
 
 
