Upgrade python framework code - switch to uv for pkg management, improve linters

--- a/.gitignore
+++ b/.gitignore
@@ -51,7 +51,6 @@ coverage.xml
 
 # Django stuff:
 *.log
-local_settings.py
 
 # Flask stuff:
 instance/
@@ -62,9 +61,6 @@ instance/
 
 # Sphinx documentation
 docs/_build/
-
-# PyBuilder
-target/
 
 # IPython Notebook
 .ipynb_checkpoints
@@ -79,6 +75,7 @@ celerybeat-schedule
 .env
 
 # virtualenv
+.venv/
 venv/
 ENV/
 
@@ -89,3 +86,6 @@ ENV/
 .ropeproject
 *.npy
 *.pkl
+
+# MacOS debris
+**/.DS_Store
