--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 authors = [
     { name = "John Miller", email = "john@johngm.com" },
 ]
-requires-python = ">=3.9"
+requires-python = ">=3.11"
 classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python",
@@ -18,37 +18,32 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: CPython",
 ]
 dependencies = [
-    "black",  # >=22.10.0",
-    "boto3",  # >=1.25.4",
-    "ciso8601",  # >=2.2.0",
-    "duckdb",
-    "fsspec",  # >=2022.11.0",
-    "genson",  # >=1.2.2",
-    "google-api-python-client",  # >=2.68.0",
-    "httplib2",  # >=0.20.2",
-    "lxml",  # >=4.9.1",
-    "marko",  # >=1.2.2",
-    "oauth2client",  # >=4.1.3",
-    "pandas>=2.0.0",
-    "python-dateutil",  # >=2.8.2",
-    "PyYAML",  # >=5.4.1",
-    "tabulate",  # >=0.8.10",
-    "pexpect",  # >=4.8.0",
-    # pandas io deps below. ref: https://pandas.pydata.org/docs/getting_started/install.html#optional-dependencies
-    "fastparquet",  # >=2022.11.0",
-    "lxml",  # >=4.9.1",
-    "openpyxl",  # >=3.0.10",
-    "psycopg2-binary",  # >=2.9.5",
-    "pyarrow",  # >=10.0.1",
-    "PyMySQL",  # >=1.0.2",
-    "SQLAlchemy>=2.0.0",
-    "xlrd",  # >=2.0.1",
-    "XlsxWriter",  # >=3.0.3",
-    "xlwt",  # >=1.3.0",
-    "tables",  # needed for hd5
-    "dpkt", # >=1.9.8  # needed for pcap
+    "boto3~=1.36.26",
+    "ciso8601~=2.3.2",
+    "duckdb~=1.2.0",
+    "fsspec~=2025.2.0",
+    "genson~=1.3.0",
+    "google-api-python-client~=2.161.0",
+    "httplib2~=0.22.0",
+    "marko~=2.1.2",
+    "oauth2client~=4.1.3",
+    "pandas~=2.2.3",
+    "pexpect~=4.9.0",
+    "python-dateutil~=2.9.0.post0",
+    "pyyaml~=6.0.2",
+    "tabulate~=0.9.0",
+    "fastparquet~=2024.11.0",
+    "lxml~=5.3.1",
+    "openpyxl~=3.1.5",
+    "psycopg2-binary~=2.9.10",
+    "pymysql~=1.1.1",
+    "sqlalchemy~=2.0.38",
+    "xlrd~=2.0.1",
+    "xlsxwriter~=3.2.2",
+    "xlwt~=1.3.0",
+    "tables~=3.10.2",  # needed for hd5
+    "dpkt~=1.9.8",  # needed for pcap
 ]
-
 [dependency-groups]
 dev = [
     "black",
@@ -64,6 +59,10 @@ dev = [
     "types-tabulate",
     "types-boto3",
     "codespell",
+]
+[project.optional-dependencies]
+witharrow = [
+    "pyarrow~=19.0.1",
 ]
 
 
