--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,16 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.10
+    - name: Set up Python 3.13
       id: setup-python
       uses: actions/setup-python@v2
       with:
-        python-version: "3.10"
+        python-version: "3.13"
     - name: Install Python Dependencies
       run: |
-        python -m pip install --upgrade pip
-        python setup.py install
-        pip install -r requirements-dev.txt
+        python -m pip install uv
+        uv sync
     - name: Test
       run: |
         make test-ci
