--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,15 +41,13 @@ dependencies = [
     "xlrd~=2.0.1",
     "xlsxwriter~=3.2.2",
     "xlwt~=1.3.0",
-    "tables~=3.10.2",  # needed for hd5
-    "dpkt~=1.9.8",  # needed for pcap
+    "tables~=3.10.2", # needed for hd5
+    "dpkt~=1.9.8", # needed for pcap
 ]
 [dependency-groups]
 dev = [
     "black",
     "coverage",
-    "flake8",
-    "flake8-pyproject",
     "hatchling",
     "pytest",
     "mypy",
@@ -59,6 +57,8 @@ dev = [
     "types-tabulate",
     "types-boto3",
     "codespell",
+    "isort",
+    "ruff",
 ]
 [project.optional-dependencies]
 witharrow = [
@@ -78,6 +78,24 @@ only-include = [
     "tableconv",
 ]
 
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.lint]
+select = [
+    # pycodestyle
+    "E",
+    # Pyflakes
+    "F",
+    # pyupgrade
+    "UP",
+    # flake8-bugbear
+    "B",
+]
+ignore = [
+    "UP038", "E203", "SIM108"
+]
+
 [tool.isort]
 line_length = 120
 default_section = "THIRDPARTY"  # codespell:ignore
@@ -86,7 +104,3 @@ profile = "black"
 
 [tool.black]
 line-length = 120
-
-[tool.flake8]
-max-line-length = 120
-ignore = ["E203", "W503", "SIM106"]
