--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dependencies = [
     "xlwt~=1.3.0",
     "tables~=3.10.2", # needed for hd5
     "dpkt~=1.9.8", # needed for pcap
+    "jc>=1.25.4",
 ]
 [dependency-groups]
 dev = [
@@ -104,3 +105,6 @@ profile = "black"
 
 [tool.black]
 line-length = 120
+
+[tool.pytest.ini_options]
+addopts = "--doctest-modules"
