--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,6 @@ classifiers = [
 ]
 dependencies = [
     "boto3~=1.36.26",
-    "ciso8601~=2.3.2",
     "duckdb~=1.2.0",
     "fsspec~=2025.2.0",
     "genson~=1.3.0",
@@ -44,6 +43,8 @@ dependencies = [
     "tables~=3.10.2", # needed for hd5
     "dpkt~=1.9.8", # needed for pcap
     "jc>=1.25.4",
+    "iso8601~=2.1.0",
+    "rich>=13.9.4",
 ]
 [dependency-groups]
 dev = [
@@ -60,12 +61,13 @@ dev = [
     "codespell",
     "isort",
     "ruff",
+    "ipdb",
 ]
 [project.optional-dependencies]
-witharrow = [
-    "pyarrow~=19.0.1",
+full = [
+    "pyarrow",
+    "leveldb_export",
 ]
-
 
 [project.urls]
 Homepage = "https://github.com/personalcomputer/tableconv"
