--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,9 @@ dependencies = [
     "iso8601~=2.1.0",
     "rich>=13.9.4",
     "black>=25.1.0",
+    "aiohttp>=3.11.18",
+    "html5lib>=1.1",
+    "beautifulsoup4>=4.13.4",
 ]
 [dependency-groups]
 dev = [
