--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,8 @@ dependencies = [
     "aiohttp>=3.11.18",
     "html5lib>=1.1",
     "beautifulsoup4>=4.13.4",
+    "remarshal>=1.0.0",
+    "msgpack>=1.1.0",
 ]
 [dependency-groups]
 dev = [
