--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,8 +47,8 @@ dependencies = [
     "rich>=13.9.4",
     "black>=25.1.0",
     "aiohttp>=3.11.18",
-    "html5lib>=1.1",
-    "beautifulsoup4>=4.13.4",
+    "html5lib>=1.1", # needed for html (pandas dep)
+    "beautifulsoup4>=4.13.4",  # needed for html (pandas dep)
     "remarshal>=1.0.0",
     "msgpack>=1.1.0",
     "osquery>=3.1.1",
@@ -77,6 +77,7 @@ full = [
     "leveldb_export",
     "pyiceberg>=0.9.1",
     "pyarrow>=20.0.0",
+    "redis>=7.1.1",
 ]
 
 [project.urls]
